--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,5 @@ jobs:
             sudo docker compose down --remove-orphans
             
             # Start containers in detached mode
+            sudo docker compose down
             sudo docker compose up -d
-            
-            # Clean up unused images
-            sudo docker system prune -f
