--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+   
+    "gitall": "git add . && git commit -m 'update' && git push"
   },
   "dependencies": {
     "next": "16.1.3",
