--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,13 +54,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Copy docker-compose.yml to EC2
+      - name: Copy files to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "docker-compose.yml"
+          source: "docker-compose.yml,Caddyfile"
           target: "/home/${{ secrets.EC2_USER }}/app"
 
       - name: Deploy via SSH
@@ -76,10 +76,13 @@ jobs:
             sudo docker compose pull
             
             # Stop and remove existing containers
-            sudo docker compose down --remove-orphans
+            sudo docker compose --profile prod down --remove-orphans
             
-            # Start containers in detached mode
-            sudo docker compose up -d
+            # Start containers in detached mode with production profile
+            sudo docker compose --profile prod up -d
+            
+            # Show running containers
+            sudo docker compose ps
             
             # Clean up unused images
             sudo docker system prune -f
