--- a/Caddyfile
+++ b/Caddyfile
@@ -8,7 +8,7 @@ api.shamimrana.me {
 }
 
 shamimrana.me {
-  reverse_proxy nextjs:5485 {
+  reverse_proxy nextjs_app:3000 {
     header_up X-Real-IP {remote_host}
     header_up X-Forwarded-For {remote_host}
     header_up X-Forwarded-Proto {scheme}
