--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,14 +54,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Copy docker-compose.yml to EC2
+      - name: Copy files to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "docker-compose.yml"
-          target: "/home/${{ secrets.EC2_USER }}/app"
+          source: "docker-compose.yml,Caddyfile"
+          target: "/home/${{ secrets.EC2_USER }}/nextjs-app"
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
@@ -70,7 +70,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /home/${{ secrets.EC2_USER }}/app
+            cd /home/${{ secrets.EC2_USER }}/nextjs-app
             
             # Pull the latest image
             sudo docker compose pull
@@ -80,6 +80,14 @@ jobs:
             
             # Start containers in detached mode
             sudo docker compose up -d
+            
+            # Update Caddyfile in backend directory and reload Caddy
+            sudo cp Caddyfile /home/${{ secrets.EC2_USER }}/app/Caddyfile
+            cd /home/${{ secrets.EC2_USER }}/app
+            sudo docker exec caddy_server caddy reload --config /etc/caddy/Caddyfile
+            
+            # Show running containers
+            sudo docker ps --filter "name=nextjs"
             
             # Clean up unused images
             sudo docker system prune -f
