--- a/.dockerignore
+++ b/.dockerignore
@@ -2,7 +2,7 @@
 node_modules
 npm-debug.log
 yarn-error.log
-package-lock.json
+# package-lock.json is needed for npm ci in Dockerfile
 yarn.lock
 pnpm-lock.yaml
 
