--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,13 +64,13 @@ jobs:
             cd /home/${{ secrets.EC2_USER }}/server
             
             # Pull the latest image
-            sudo docker compose --profile prod pull
+            sudo docker compose --profile frontend pull
             
             # Stop and remove existing containers
-            sudo docker compose --profile prod down --remove-orphans
+            sudo docker compose --profile frontend down --remove-orphans
             
             # Start containers in detached mode
-            sudo docker compose --profile prod up -d
+            sudo docker compose --profile frontend up -d
             
             # Clean up unused images
             sudo docker system prune -f
