--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "build": "next build",
     "start": "next start -p 8545",
     "lint": "eslint",
-   
     "git": "git add . && git commit -m 'update' && git push"
   },
   "dependencies": {
     "next": "16.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.344.0",
+    "tailwind-merge": "^2.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
